WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26056
XPath string() function can be very slow
https://bugs.webkit.org/show_bug.cgi?id=26056
Summary
XPath string() function can be very slow
Alexey Proskuryakov
Reported
2009-05-27 22:57:18 PDT
stringValue(Node*) appends values to a String, which is very slow for a large tree. Patch forthcoming.
Attachments
proposed fix
(1.61 KB, patch)
2009-05-27 22:58 PDT
,
Alexey Proskuryakov
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-05-27 22:58:52 PDT
Created
attachment 30727
[details]
proposed fix
Oliver Hunt
Comment 2
2009-05-27 23:01:15 PDT
Comment on
attachment 30727
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 3
2009-05-27 23:02:47 PDT
Committed
r44220
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug