        Reviewed by Oliver Hunt.

https://bugs.webkit.org/show_bug.cgi?id=26056
        XPath string() function can be very slow

        * xml/XPathUtil.cpp: (WebCore::XPath::stringValue): Use an intermediate Vector when appending.



Canonical link: https://commits.webkit.org/36067@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44220 268f45cc-cd09-0410-ab3c-d52691b4dbfc